fix: Ajuste de httpOnly